# wgh3

./: .rsync-filter  Cargo.toml  Makefile  README.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
configs/: client.toml  nginx.conf  server.toml  wgh3-sysctl.conf  wgh3.service  whh3.service
src/: client.rs  config.rs  decoy.rs  fallback.rs  lib.rs  main.rs  masque.rs  server.rs  tls.rs
src/network/: dns.rs  hooks.rs  lifecycle.rs  mod.rs  routes.rs  state.rs  tun.rs
src/wg/: codec.rs  mod.rs  tunnel.rs
tests/: masque.rs  pipeline.rs  tun.rs  wg.rs
